feat(api-routines): refactor pet routines around activities
